--- a/style.css
+++ b/style.css
@@ -1,7 +1,38 @@
-.header_div {
-    background: white;
-    color: #ce2700;
-}
-.header_div img{
-    width: 100px;
-}
+.copy_right_footer {
+    position: fixed;
+    color: #6c757d;
+    bottom: 0;
+    width: 100%;
+    background-color: #f5f5f5;
+    line-height: 3;
+    text-align: center;
+      font-family: 'Special Elite', cursive;
+ 
+ }
+ 
+ span
+ {
+     color: rgb(191, 29, 29);
+     font-size: 16px;
+ }	
+ li img
+ {
+     width: 200px;
+     border-radius: 20px;
+ }
+ .Image
+ {
+     background: #fff8f8;
+     padding: 30px;
+     border-radius: 20px;
+     width: 50%;
+     display: inline-block;
+     box-shadow: 5px 5px 18px grey;
+ }
+ b
+ {
+     color: purple;
+ }
+ 
+ 
+ 
